# IOS-CAM

./: .gitignore  CMakeLists.txt  builder.json
.github/workflows/: ios-build.yml
Desktop/src/: DeviceManager.cpp  DeviceManager.h  H264Decoder.cpp  H264Decoder.h  MdnsBrowser.cpp  MdnsBrowser.h  SharedMemoryStream.cpp  SharedMemoryStream.h  UIWindow.cpp  UIWindow.h  UsbMuxClient.cpp  UsbMuxClient.h  UsbMuxDebug.cpp  main.cpp  resource.rc
Docs/Obsidian_Second_Brain/: MiCam Pro - Architecture & Implementation.md  MiCam Pro - Troubleshooting & Fixes Log.md
Installer/: Installer.wxs
OBSPlugin/src/: micam_obs_plugin.cpp  obs-module.h
Shared/: DeviceRegistry.cpp  DeviceRegistry.h  protocol.h
VirtualCamera/src/: VirtualCameraMediaFoundation.cpp  VirtualCameraMediaFoundation.h
iOS/: builder.json
iOS/MiCam/: Info.plist
iOS/MiCam/App/: MiCamApp.swift
iOS/MiCam/Core/: CameraManager.swift  VideoEncoder.swift
iOS/MiCam/Network/: NetworkStreamer.swift
iOS/MiCam/Shared/: Protocol.swift
iOS/MiCam/UI/: ContentView.swift
